fix: fixed popover on iOS, chat is now still open when reloading, chat history is saved in sessionStorage (#25)

--- a/discussion/src/App.css
+++ b/discussion/src/App.css
@@ -8,31 +8,39 @@
 }
 
 .app-placement-left {
-	left: var(--padding-size-2);
+	left: var(--padding-size-1);
 }
 
 .app-placement-right {
-	right: var(--padding-size-2);
+	right: var(--padding-size-1);
 }
 
 .app-container-expanded {
 	bottom: var(--padding-size-1) !important;
-	left: var(--padding-size-1) !important;
 	animation: 1s slideup;
+}
+
+.app-container-already-opened {
+	bottom: var(--padding-size-1) !important;
 }
 
 .app-container-collapsed {
 	bottom: var(--padding-size-1) !important;
-	left: var(--padding-size-1) !important;
 	animation: 1100ms slidedown;
 }
 
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 599px) {
 	.app-container-expanded {
 		bottom: 0 !important;
 		left: 0 !important;
 		right: 0 !important;
 		top: 0 !important;
+	}
+
+	.app-container-already-opened {
+		bottom: 0 !important;
+		left: 0 !important;
+		right: 0 !important;
 	}
 
 	.app-container-collapsed {
