--- a/discussion/src/components/presenter/Presenter.css
+++ b/discussion/src/components/presenter/Presenter.css
@@ -15,7 +15,7 @@
 	animation: 1s slideup;
 }
 
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 599px) {
 	.presenter-expanded {
 		max-width: 100vw;
 		max-height: 100vh;
